# hack-2026-nornikel

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.server.yml  docker-compose.yml  pyproject.toml
.claude/: CLAUDE.md
.github/workflows/: ci.yml  deploy.yml
.serena/: project.yml
.serena/memories/: ARCH-01-EVIDENCE-MVP.md  CODEX-01-PLUGIN-CANON.md  CORE-01-INDEX.md  DATA-01-EVIDENCE-LEDGER.md  DESIGN-01-WEB-UI.md  DOCS-01-INSTRUCTIONS.md  DOCS-01-PLANNING-SOURCE.md  RELEASE-01-VALIDATION.md  SEC-01-ACL-AND-PROMPT-INJECTION.md  TECHDEBT-01-NOW.md  TEST-01-EVALUATION-GATES.md
.serena/plans/: 00_PLAN_INDEX.md  01_MVP_SCOPE_AND_DECISIONS.md  02_TARGET_ARCHITECTURE.md  03_IMPLEMENTATION_PLAN.md  04_SYNTHETIC_CORPUS_PLAN.md  05_QUALITY_GATES_AND_EVAL.md  06_DEPLOYMENT_AND_OBSERVABILITY.md  07_DEMO_AND_PITCH_PLAN.md  08_TRACK_FULL_REQUIREMENTS_AND_GAPS.md  09_ACCURACY_SOTA_OVERHAUL.md  10_AUDIT_RESPONSE_PLAN.md  11_BACKEND_HARDENING_PLAN.md  12_REVIEW_FIXES_PLAN.md
.serena/reviews/: 01_PLAN_CRITICAL_REVIEW.md  02_RESEARCH_EVIDENCE_REGISTER.md
apps/web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/deployment/: fa-nddev.md  full-ingest-runbook.md  nornikel-nddev.md
eval/: adversarial_questions.yml  expected_spans.yml  gold_questions.yml
nauchny_klubok_site_package/: README.md
nauchny_klubok_site_package/docs/: asset_catalog.md  file_manifest.json  implementation_outline.md  page_specs.md  pages.json
sample_docs/: README.md
sample_docs/synthetic/: mechanical_properties.csv  nicu_aging_report.md
sample_docs/synthetic_v2/: manifest.json  v2_measurements_cuni.csv  v2_measurements_nicrmo.csv  v2_measurements_nicu.csv  v2_measurements_solution.csv  v2_note_corrosion.md  v2_note_decisions.md  v2_note_qualitative.md  v2_online_resource.html  v2_protocol_01_aging.docx  v2_protocol_02_aging.docx  v2_protocol_03_annealing.docx  v2_protocol_04_annealing.docx  v2_protocol_05_cold_rolling.docx  v2_protocol_06_solution_treatment.docx
scripts/: generate_synthetic_docs.py  ingest_corpus.py  merge_duckdb_shards.py  reindex.py  run_eval.py  run_realcase_eval.py  warmup.py
services/: __init__.py
services/api/: Dockerfile  main.py
src/nornikel_kg/: __init__.py
tests/integration/: test_analytics_api.py  test_api.py  test_duckdb_ledger.py  test_graph_api.py  test_ingest_api.py  test_synthetic_v2_corpus.py
tests/unit/: test_answer_composer.py  test_answer_honesty.py  test_claim_verifier.py  test_corpus_formats.py  (+22 more)
(+161 files in other folders)
